# libnm-rs

./: Cargo.toml  Gir.sys.toml  Gir.toml  Gir_NM.sys.toml  Gir_NM.toml  Makefile  README.md  update.sh
examples/: access-point.rs  connect-wifi.rs  connect.rs  connections.rs  connectivity.rs  iface.rs  list-connections.rs
examples/common/: mod.rs
gir-files/: NM-1.0.gir
nm-sys/: Cargo.toml  build.rs
nm-sys/src/: lib.rs
nm-sys/src/auto/: versions.txt
nm-sys/tests/: abi.rs  constant.c  layout.c  manual.h
src/: access_point.rs  active_connection.rs  array.rs  bridge_vlan.rs  checkpoint.rs  client.rs  connection.rs  constants.rs  device.rs  device6_lowpan.rs  device_adsl.rs  device_bond.rs  device_bridge.rs  device_bt.rs  device_dummy.rs  device_ethernet.rs  device_generic.rs  device_infiniband.rs  device_ip_tunnel.rs  device_macsec.rs  device_macvlan.rs  device_modem.rs  device_olpc_mesh.rs  device_ovs_bridge.rs  device_ovs_interface.rs  device_ovs_port.rs  device_ppp.rs  device_team.rs  device_tun.rs  device_veth.rs  device_vlan.rs  device_vrf.rs  device_vxlan.rs  device_wifi.rs  device_wifi_p2p.rs  device_wimax.rs  device_wire_guard.rs  device_wpan.rs  dhcp_config.rs  dns_entry.rs  (+83 more)
src/auto/: access_point.rs  active_connection.rs  checkpoint.rs  client.rs  connection.rs  constants.rs  device.rs  device_adsl.rs  device_bond.rs  device_bridge.rs  device_bt.rs  device_dummy.rs  device_ethernet.rs  device_generic.rs  device_infiniband.rs  device_ip_tunnel.rs  device_macsec.rs  device_macvlan.rs  device_modem.rs  device_olpc_mesh.rs  device_team.rs  device_tun.rs  device_vlan.rs  device_vxlan.rs  device_wifi.rs  dhcp_config.rs  enums.rs  flags.rs  functions.rs  ip_address.rs  ip_config.rs  ip_route.rs  mod.rs  remote_connection.rs  setting.rs  setting8021x.rs  setting_adsl.rs  setting_bluetooth.rs  setting_bond.rs  setting_bridge.rs  (+44 more)
