[package]
name = "nm"
version = "0.1.0"
authors = ["majorz"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
lazy_static = "1.0"

[dependencies.nm-sys]
path = "nm-sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.fragile]
version = "0.3"
optional = true

[dependencies.futures-preview]
version = "0.2"
optional = true

[dependencies.futures-core-preview]
version = "0.2"
optional = true

[dev-dependencies]
clap = "2.32"

[features]
v1_12_2 = ["nm-sys/v1_12_2", "v1_12"]
v1_12 = ["nm-sys/v1_12", "v1_10"]
v1_10 = ["nm-sys/v1_10", "v1_8"]
v1_8 = ["nm-sys/v1_8", "v1_6"]
v1_6 = ["nm-sys/v1_6", "v1_4"]
v1_4 = ["nm-sys/v1_4"]
futures = ["futures-preview", "futures-core-preview", "fragile", "gio/futures"]
dox = ["nm-sys/dox", "glib/dox", "futures"]
default = ["v1_6"]

[[example]]
name = "connect-wifi"
required-features = ["futures"]

[[example]]
name = "access-point"
required-features = ["futures"]

[[example]]
name = "connectivity"
