[package]
name = 'nm'
version = '0.2.2'
authors = ['majorz']

[dependencies]
lazy_static = '1.2'
bitflags = '1.0'
futures-core = '0.3'
futures-task = '0.3'
futures-executor = '0.3'
futures-util = '0.3'
futures-channel = '0.3'
glib = '0.9.1'
gio = '0.8.0'
libc = '0.2'
glib-sys = '0.9.1'
gio-sys = '0.9.1'
gobject-sys = '0.9.1'

[dependencies.nm-sys]
path = 'nm-sys'

[features]
v1_2 = ['nm-sys/v1_2']
v1_4 = ['nm-sys/v1_4', 'v1_2']
v1_6 = ['nm-sys/v1_6', 'v1_4']
v1_8 = ['nm-sys/v1_8', 'v1_6']
v1_10 = ['nm-sys/v1_10', 'v1_8']
v1_12 = ['nm-sys/v1_12', 'v1_10']
v1_14 = ['nm-sys/v1_14', 'v1_12']
v1_16 = ['nm-sys/v1_16', 'v1_14']
v1_18 = ['nm-sys/v1_18', 'v1_16']
v1_20 = ['nm-sys/v1_20', 'v1_18']
v1_22 = ['nm-sys/v1_22', 'v1_20']
default = ['v1_22']
