[package]
name = 'nm'
version = '0.4.0'
authors = ['majorz']
edition = '2018'

[dependencies]
libc = '0.2'
once_cell = '1.5'
bitflags = '1.2'
futures-core = '0.3'
futures-task = '0.3'
futures-executor = '0.3'
futures-util = '0.3'
futures-channel = '0.3'

[dependencies.glib]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.glib-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gio]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gio-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gobject-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.ffi]
package = 'nm-sys'
path = 'nm-sys'

[dev-dependencies]
anyhow = '1.0'
clap = '3.0.0-beta.1'

[features]
v1_2 = ['ffi/v1_2']
v1_4 = ['ffi/v1_4', 'v1_2']
v1_6 = ['ffi/v1_6', 'v1_4']
v1_8 = ['ffi/v1_8', 'v1_6']
v1_10 = ['ffi/v1_10', 'v1_8']
v1_12 = ['ffi/v1_12', 'v1_10']
v1_14 = ['ffi/v1_14', 'v1_12']
v1_16 = ['ffi/v1_16', 'v1_14']
v1_18 = ['ffi/v1_18', 'v1_16']
v1_20 = ['ffi/v1_20', 'v1_18']
v1_22 = ['ffi/v1_22', 'v1_20']
v1_24 = ['ffi/v1_24', 'v1_22']
v1_26 = ['ffi/v1_26', 'v1_24']
v1_28 = ['ffi/v1_28', 'v1_26']
v1_30 = ['ffi/v1_30', 'v1_28']
v1_32 = ['ffi/v1_32', 'v1_30']
default = ['v1_32']
