[package]
name = "nm-sys"
version = "0.0.1"
links = "nm"
build = "build.rs"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "nm_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[build-dependencies]
pkg-config = "0.3.7"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v1_0 = []
v1_2 = ["v1_0"]
v1_4 = ["v1_2"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]
v1_10 = ["v1_8"]
v1_12 = ["v1_10"]
v1_14 = ["v1_12"]
v1_16 = ["v1_14"]
v1_18 = ["v1_16"]
v1_20 = ["v1_18"]
v1_22 = ["v1_20"]
v1_24 = ["v1_22"]
dox = []
