[package]
name = 'nm-sys'
version = '0.4.0'
authors = ['majorz']
links = '"nm"'
edition = '2018'
build = 'build.rs'

[package.metadata.docs.rs]
features = ['dox']

[package.metadata.system-deps]
libnm = '1'

[lib]
name = 'nm_sys'

[dependencies]
libc = '0.2'

[dependencies.glib-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gio-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gobject-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[build-dependencies]
system-deps = '1.3'

[dev-dependencies]
shell-words = '0.1.0'
tempfile = '3'

[features]
v1_2 = []
v1_4 = ['v1_2']
v1_6 = ['v1_4']
v1_8 = ['v1_6']
v1_10 = ['v1_8']
v1_12 = ['v1_10']
v1_14 = ['v1_12']
v1_16 = ['v1_14']
v1_18 = ['v1_16']
v1_20 = ['v1_18']
v1_22 = ['v1_20']
v1_24 = ['v1_22']
v1_26 = ['v1_24']
v1_28 = ['v1_26']
v1_30 = ['v1_28']
v1_32 = ['v1_30']
dox = []
